// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label custom class 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="custom-class c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label custom font color 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #F7B3B3;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label custom style 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
    style="background-color: red;"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label focused 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: 0rem 0rem 0.2rem #0066ff;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label inline compact 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0rem 0rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label inline expanded 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0rem 0.3rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label inset 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #f7f7f7;
  color: #1a1a1a;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c0::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 0.3rem;
  background: #4267B2;
  border-radius: 0.2rem 0 0 0.2rem;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label inset with custom color 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #a7a7a7;
  color: #1a1a1a;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c0::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 0.3rem;
  background: #4267B2;
  border-radius: 0.2rem 0 0 0.2rem;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label outlined 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid #000000;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label right custom addon 1`] = `
<DocumentFragment>
  .c1 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.5rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
    <span
      class="c1"
      fill="#FFFFFF"
      height="18px"
      style="cursor: pointer;"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#FFFFFF"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label rounded 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 999px;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size large compact 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4rem 0.7rem 0.4rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size large expanded 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4rem 1rem 0.4rem 1rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size large left and right icons 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4rem 0.5rem 0.4rem 0.5rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-right: 0.4rem;
}

.c3 {
  margin-left: 0.4rem;
}

<div
    class="c0"
  >
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oDragIndicator"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 18C11 19.1 10.1 20 9 20C7.9 20 7 19.1 7 18C7 16.9 7.9 16 9 16C10.1 16 11 16.9 11 18ZM9 10C7.9 10 7 10.9 7 12C7 13.1 7.9 14 9 14C10.1 14 11 13.1 11 12C11 10.9 10.1 10 9 10ZM9 4C7.9 4 7 4.9 7 6C7 7.1 7.9 8 9 8C10.1 8 11 7.1 11 6C11 4.9 10.1 4 9 4ZM15 8C16.1 8 17 7.1 17 6C17 4.9 16.1 4 15 4C13.9 4 13 4.9 13 6C13 7.1 13.9 8 15 8ZM15 10C13.9 10 13 10.9 13 12C13 13.1 13.9 14 15 14C16.1 14 17 13.1 17 12C17 10.9 16.1 10 15 10ZM15 16C13.9 16 13 16.9 13 18C13 19.1 13.9 20 15 20C16.1 20 17 19.1 17 18C17 16.9 16.1 16 15 16Z"
        />
      </svg>
    </span>
    <span>
      label
    </span>
    <span
      class="c3 c2"
      fill="#ffffff"
      height="18px"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size large left icon 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4rem 0.7rem 0.4rem 0.5rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-right: 0.4rem;
}

<div
    class="c0"
  >
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oDragIndicator"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 18C11 19.1 10.1 20 9 20C7.9 20 7 19.1 7 18C7 16.9 7.9 16 9 16C10.1 16 11 16.9 11 18ZM9 10C7.9 10 7 10.9 7 12C7 13.1 7.9 14 9 14C10.1 14 11 13.1 11 12C11 10.9 10.1 10 9 10ZM9 4C7.9 4 7 4.9 7 6C7 7.1 7.9 8 9 8C10.1 8 11 7.1 11 6C11 4.9 10.1 4 9 4ZM15 8C16.1 8 17 7.1 17 6C17 4.9 16.1 4 15 4C13.9 4 13 4.9 13 6C13 7.1 13.9 8 15 8ZM15 10C13.9 10 13 10.9 13 12C13 13.1 13.9 14 15 14C16.1 14 17 13.1 17 12C17 10.9 16.1 10 15 10ZM15 16C13.9 16 13 16.9 13 18C13 19.1 13.9 20 15 20C16.1 20 17 19.1 17 18C17 16.9 16.1 16 15 16Z"
        />
      </svg>
    </span>
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size large right icon 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.4rem 0.5rem 0.4rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-left: 0.4rem;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size medium compact 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size medium expanded 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 1rem 0.2rem 1rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size medium left and right icons 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-right: 0.4rem;
}

.c3 {
  margin-left: 0.4rem;
}

<div
    class="c0"
  >
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oDragIndicator"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 18C11 19.1 10.1 20 9 20C7.9 20 7 19.1 7 18C7 16.9 7.9 16 9 16C10.1 16 11 16.9 11 18ZM9 10C7.9 10 7 10.9 7 12C7 13.1 7.9 14 9 14C10.1 14 11 13.1 11 12C11 10.9 10.1 10 9 10ZM9 4C7.9 4 7 4.9 7 6C7 7.1 7.9 8 9 8C10.1 8 11 7.1 11 6C11 4.9 10.1 4 9 4ZM15 8C16.1 8 17 7.1 17 6C17 4.9 16.1 4 15 4C13.9 4 13 4.9 13 6C13 7.1 13.9 8 15 8ZM15 10C13.9 10 13 10.9 13 12C13 13.1 13.9 14 15 14C16.1 14 17 13.1 17 12C17 10.9 16.1 10 15 10ZM15 16C13.9 16 13 16.9 13 18C13 19.1 13.9 20 15 20C16.1 20 17 19.1 17 18C17 16.9 16.1 16 15 16Z"
        />
      </svg>
    </span>
    <span>
      label
    </span>
    <span
      class="c3 c2"
      fill="#ffffff"
      height="18px"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size medium left icon 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.7rem 0.2rem 0.5rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-right: 0.4rem;
}

<div
    class="c0"
  >
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oDragIndicator"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 18C11 19.1 10.1 20 9 20C7.9 20 7 19.1 7 18C7 16.9 7.9 16 9 16C10.1 16 11 16.9 11 18ZM9 10C7.9 10 7 10.9 7 12C7 13.1 7.9 14 9 14C10.1 14 11 13.1 11 12C11 10.9 10.1 10 9 10ZM9 4C7.9 4 7 4.9 7 6C7 7.1 7.9 8 9 8C10.1 8 11 7.1 11 6C11 4.9 10.1 4 9 4ZM15 8C16.1 8 17 7.1 17 6C17 4.9 16.1 4 15 4C13.9 4 13 4.9 13 6C13 7.1 13.9 8 15 8ZM15 10C13.9 10 13 10.9 13 12C13 13.1 13.9 14 15 14C16.1 14 17 13.1 17 12C17 10.9 16.1 10 15 10ZM15 16C13.9 16 13 16.9 13 18C13 19.1 13.9 20 15 20C16.1 20 17 19.1 17 18C17 16.9 16.1 16 15 16Z"
        />
      </svg>
    </span>
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size medium right icon 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.2rem 0.5rem 0.2rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-left: 0.4rem;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size small compact 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.1rem 0.7rem 0.1rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size small expanded 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.1rem 1rem 0.1rem 1rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size small left and right icons 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.1rem 0.3rem 0.1rem 0.3rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-right: 0.2rem;
}

.c3 {
  margin-left: 0.2rem;
}

<div
    class="c0"
  >
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oDragIndicator"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 18C11 19.1 10.1 20 9 20C7.9 20 7 19.1 7 18C7 16.9 7.9 16 9 16C10.1 16 11 16.9 11 18ZM9 10C7.9 10 7 10.9 7 12C7 13.1 7.9 14 9 14C10.1 14 11 13.1 11 12C11 10.9 10.1 10 9 10ZM9 4C7.9 4 7 4.9 7 6C7 7.1 7.9 8 9 8C10.1 8 11 7.1 11 6C11 4.9 10.1 4 9 4ZM15 8C16.1 8 17 7.1 17 6C17 4.9 16.1 4 15 4C13.9 4 13 4.9 13 6C13 7.1 13.9 8 15 8ZM15 10C13.9 10 13 10.9 13 12C13 13.1 13.9 14 15 14C16.1 14 17 13.1 17 12C17 10.9 16.1 10 15 10ZM15 16C13.9 16 13 16.9 13 18C13 19.1 13.9 20 15 20C16.1 20 17 19.1 17 18C17 16.9 16.1 16 15 16Z"
        />
      </svg>
    </span>
    <span>
      label
    </span>
    <span
      class="c3 c2"
      fill="#ffffff"
      height="18px"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size small left icon 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.1rem 0.7rem 0.1rem 0.3rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-right: 0.2rem;
}

<div
    class="c0"
  >
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oDragIndicator"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 18C11 19.1 10.1 20 9 20C7.9 20 7 19.1 7 18C7 16.9 7.9 16 9 16C10.1 16 11 16.9 11 18ZM9 10C7.9 10 7 10.9 7 12C7 13.1 7.9 14 9 14C10.1 14 11 13.1 11 12C11 10.9 10.1 10 9 10ZM9 4C7.9 4 7 4.9 7 6C7 7.1 7.9 8 9 8C10.1 8 11 7.1 11 6C11 4.9 10.1 4 9 4ZM15 8C16.1 8 17 7.1 17 6C17 4.9 16.1 4 15 4C13.9 4 13 4.9 13 6C13 7.1 13.9 8 15 8ZM15 10C13.9 10 13 10.9 13 12C13 13.1 13.9 14 15 14C16.1 14 17 13.1 17 12C17 10.9 16.1 10 15 10ZM15 16C13.9 16 13 16.9 13 18C13 19.1 13.9 20 15 20C16.1 20 17 19.1 17 18C17 16.9 16.1 16 15 16Z"
        />
      </svg>
    </span>
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label with size small right icon 1`] = `
<DocumentFragment>
  .c2 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.1rem 0.3rem 0.1rem 0.7rem;
  background-color: #002966;
  color: #ffffff;
  font-size: 1.2rem;
  line-height: 1.8rem;
  border-radius: 0.2rem;
  border: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  overflow: hidden;
}

.c1 {
  margin-left: 0.2rem;
}

<div
    class="c0"
  >
    <span>
      label
    </span>
    <span
      class="c1 c2"
      fill="#ffffff"
      height="18px"
      type="oClose"
      width="18px"
    >
      <svg
        fill="#ffffff"
        height="18px"
        viewBox="0 0 24 24"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
